// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuantityDataMap > returns correctly formatted output... > while granularity is date 1`] = `
{
  "%groupId": null,
  "altValue": 0,
  "alternativeUnitId": null,
  "availabilityLossAltQty": 0,
  "availabilityLossAltQtyFormatted": "0,00",
  "availabilityLossQty": 0,
  "availabilityLossQtyFormatted": "0,00",
  "color": null,
  "defined": true,
  "entityGroupName": null,
  "entityName": "Evocon production line T2",
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodAltQty": 0,
  "goodAltQtyFormatted": "0,00",
  "goodGroupGoodAltQty": null,
  "goodGroupGoodQty": null,
  "goodGroupIdealAltQty": null,
  "goodGroupIdealPerformanceAltQty": null,
  "goodGroupIdealPerformanceQty": null,
  "goodGroupIdealQty": null,
  "goodGroupTotalAltQty": null,
  "goodGroupTotalQty": null,
  "goodQty": 0,
  "goodQtyFormatted": "0,00",
  "goodQtyPct": 0,
  "goodQtyPctFormatted": "0,00%",
  "groupingKey": "2022-11-25",
  "idealAltQty": 0,
  "idealAltQtyFormatted": "0,00",
  "idealQty": 0,
  "idealQtyFormatted": "0,00",
  "isFake": false,
  "itemGroupingId": "2022-11-25",
  "lotCode": null,
  "measureLabel": "25",
  "notes": null,
  "notesCount": null,
  "operator": "",
  "operatorId": [
    null,
  ],
  "performanceLossAltQty": 0,
  "performanceLossAltQtyFormatted": "0,00",
  "performanceLossQty": 0,
  "performanceLossQtyFormatted": "0,00",
  "potentialAltQty": 0,
  "potentialAltQtyFormatted": "0,00",
  "potentialGroupIdealAltQty": null,
  "potentialGroupIdealPerformanceAltQty": null,
  "potentialGroupIdealPerformanceQty": null,
  "potentialGroupIdealQty": null,
  "potentialGroupTotalAltQty": null,
  "potentialGroupTotalQty": null,
  "potentialQty": 0,
  "potentialQtyFormatted": "0,00",
  "potentialQtyPctFormatted": null,
  "product": "Uus Johanna toode - Product route test",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    1957,
  ],
  "productionOrder": null,
  "rowProducedAltQty": 0,
  "rowProducedAltQtyFormatted": "0,00",
  "rowProducedQty": 0,
  "rowProducedQtyFormatted": "0,00",
  "scrapAltQty": 0,
  "scrapAltQtyFormatted": "0,00",
  "scrapGroupIdealAltQty": null,
  "scrapGroupIdealPerformanceAltQty": null,
  "scrapGroupIdealPerformanceQty": null,
  "scrapGroupIdealQty": null,
  "scrapGroupScrapAltQty": null,
  "scrapGroupScrapQty": null,
  "scrapGroupTotalAltQty": null,
  "scrapGroupTotalQty": null,
  "scrapQty": 0,
  "scrapQtyFormatted": "0,00",
  "scrapQtyPct": 0,
  "scrapQtyPctFormatted": "0,00%",
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Evocon production line T2",
  "stationGroup": "Tehas 2",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    1,
  ],
  "tableTimeLabel": "25.11.2022",
  "tooltipXLabel": "25.11.2022",
  "unitId": "tk",
  "value": 0,
  "xScaleValue": "2022-11-25",
  "xScaleValueFormatted": "25.11.2022",
}
`;

exports[`QuantityDataMap > returns correctly formatted output... > while granularity is month 1`] = `
{
  "%groupId": null,
  "altValue": 0,
  "alternativeUnitId": null,
  "availabilityLossAltQty": 0,
  "availabilityLossAltQtyFormatted": "0,00",
  "availabilityLossQty": 0,
  "availabilityLossQtyFormatted": "0,00",
  "color": null,
  "defined": true,
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodAltQty": 0,
  "goodAltQtyFormatted": "0,00",
  "goodGroupGoodAltQty": null,
  "goodGroupGoodQty": null,
  "goodGroupIdealAltQty": null,
  "goodGroupIdealPerformanceAltQty": null,
  "goodGroupIdealPerformanceQty": null,
  "goodGroupIdealQty": null,
  "goodGroupTotalAltQty": null,
  "goodGroupTotalQty": null,
  "goodQty": 0,
  "goodQtyFormatted": "0,00",
  "goodQtyPct": 0,
  "goodQtyPctFormatted": "0,00%",
  "groupingKey": "202211",
  "idealAltQty": 0,
  "idealAltQtyFormatted": "0,00",
  "idealQty": 0,
  "idealQtyFormatted": "0,00",
  "isFake": false,
  "itemGroupingId": "202211",
  "lotCode": null,
  "measureLabel": "November",
  "notes": null,
  "notesCount": null,
  "operator": "",
  "operatorId": [
    null,
  ],
  "performanceLossAltQty": 0,
  "performanceLossAltQtyFormatted": "0,00",
  "performanceLossQty": 0,
  "performanceLossQtyFormatted": "0,00",
  "potentialAltQty": 0,
  "potentialAltQtyFormatted": "0,00",
  "potentialGroupIdealAltQty": null,
  "potentialGroupIdealPerformanceAltQty": null,
  "potentialGroupIdealPerformanceQty": null,
  "potentialGroupIdealQty": null,
  "potentialGroupTotalAltQty": null,
  "potentialGroupTotalQty": null,
  "potentialQty": 0,
  "potentialQtyFormatted": "0,00",
  "potentialQtyPctFormatted": null,
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    8,
  ],
  "productionOrder": null,
  "rowProducedAltQty": 0,
  "rowProducedAltQtyFormatted": "0,00",
  "rowProducedQty": 0,
  "rowProducedQtyFormatted": "0,00",
  "scrapAltQty": 0,
  "scrapAltQtyFormatted": "0,00",
  "scrapGroupIdealAltQty": null,
  "scrapGroupIdealPerformanceAltQty": null,
  "scrapGroupIdealPerformanceQty": null,
  "scrapGroupIdealQty": null,
  "scrapGroupScrapAltQty": null,
  "scrapGroupScrapQty": null,
  "scrapGroupTotalAltQty": null,
  "scrapGroupTotalQty": null,
  "scrapQty": 0,
  "scrapQtyFormatted": "0,00",
  "scrapQtyPct": 0,
  "scrapQtyPctFormatted": "0,00%",
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "November",
  "tooltipXLabel": "01.11.2022 - 30.11.2022",
  "unitId": "MIN",
  "value": 0,
  "xScaleValue": "202211",
  "xScaleValueFormatted": "01.11.2022 - 30.11.2022",
}
`;

exports[`QuantityDataMap > returns correctly formatted output... > while granularity is total 1`] = `
{
  "%groupId": null,
  "altValue": 0,
  "alternativeUnitId": null,
  "availabilityLossAltQty": 0,
  "availabilityLossAltQtyFormatted": "0,00",
  "availabilityLossQty": 0,
  "availabilityLossQtyFormatted": "0,00",
  "color": null,
  "defined": true,
  "entityGroupName": null,
  "entityName": "Tehas 1.",
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodAltQty": 0,
  "goodAltQtyFormatted": "0,00",
  "goodGroupGoodAltQty": null,
  "goodGroupGoodQty": null,
  "goodGroupIdealAltQty": null,
  "goodGroupIdealPerformanceAltQty": null,
  "goodGroupIdealPerformanceQty": null,
  "goodGroupIdealQty": null,
  "goodGroupTotalAltQty": null,
  "goodGroupTotalQty": null,
  "goodQty": 0,
  "goodQtyFormatted": "0,00",
  "goodQtyPct": 0,
  "goodQtyPctFormatted": "0,00%",
  "groupingKey": 2,
  "idealAltQty": 0,
  "idealAltQtyFormatted": "0,00",
  "idealQty": 0,
  "idealQtyFormatted": "0,00",
  "isFake": false,
  "itemGroupingId": 2,
  "lotCode": "LOT-001",
  "measureLabel": "Tehas 1.",
  "notes": null,
  "notesCount": null,
  "operator": "",
  "operatorId": [
    null,
  ],
  "performanceLossAltQty": 0,
  "performanceLossAltQtyFormatted": "0,00",
  "performanceLossQty": 0,
  "performanceLossQtyFormatted": "0,00",
  "potentialAltQty": 0,
  "potentialAltQtyFormatted": "0,00",
  "potentialGroupIdealAltQty": null,
  "potentialGroupIdealPerformanceAltQty": null,
  "potentialGroupIdealPerformanceQty": null,
  "potentialGroupIdealQty": null,
  "potentialGroupTotalAltQty": null,
  "potentialGroupTotalQty": null,
  "potentialQty": 0,
  "potentialQtyFormatted": "0,00",
  "potentialQtyPctFormatted": null,
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    8,
  ],
  "productionOrder": "ORDER-42",
  "rowProducedAltQty": 0,
  "rowProducedAltQtyFormatted": "0,00",
  "rowProducedQty": 0,
  "rowProducedQtyFormatted": "0,00",
  "scrapAltQty": 0,
  "scrapAltQtyFormatted": "0,00",
  "scrapGroupIdealAltQty": null,
  "scrapGroupIdealPerformanceAltQty": null,
  "scrapGroupIdealPerformanceQty": null,
  "scrapGroupIdealQty": null,
  "scrapGroupScrapAltQty": null,
  "scrapGroupScrapQty": null,
  "scrapGroupTotalAltQty": null,
  "scrapGroupTotalQty": null,
  "scrapQty": 0,
  "scrapQtyFormatted": "0,00",
  "scrapQtyPct": 0,
  "scrapQtyPctFormatted": "0,00%",
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "Tehas 1.",
  "tooltipXLabel": "Tehas 1.",
  "unitId": "MIN",
  "value": 0,
  "xScaleValue": 2,
  "xScaleValueFormatted": "",
}
`;

exports[`QuantityDataMap > returns correctly formatted output... > while granularity is weekofyear 1`] = `
{
  "%groupId": null,
  "altValue": 0,
  "alternativeUnitId": null,
  "availabilityLossAltQty": 0,
  "availabilityLossAltQtyFormatted": "0,00",
  "availabilityLossQty": 0,
  "availabilityLossQtyFormatted": "0,00",
  "color": null,
  "defined": true,
  "entityGroupName": null,
  "entityName": "Evocon production line T2",
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodAltQty": 0,
  "goodAltQtyFormatted": "0,00",
  "goodGroupGoodAltQty": null,
  "goodGroupGoodQty": null,
  "goodGroupIdealAltQty": null,
  "goodGroupIdealPerformanceAltQty": null,
  "goodGroupIdealPerformanceQty": null,
  "goodGroupIdealQty": null,
  "goodGroupTotalAltQty": null,
  "goodGroupTotalQty": null,
  "goodQty": 0,
  "goodQtyFormatted": "0,00",
  "goodQtyPct": 0,
  "goodQtyPctFormatted": "0,00%",
  "groupingKey": "202247",
  "idealAltQty": 0,
  "idealAltQtyFormatted": "0,00",
  "idealQty": 0,
  "idealQtyFormatted": "0,00",
  "isFake": false,
  "itemGroupingId": "202247",
  "lotCode": null,
  "measureLabel": "47",
  "notes": null,
  "notesCount": null,
  "operator": "",
  "operatorId": [
    null,
  ],
  "performanceLossAltQty": 0,
  "performanceLossAltQtyFormatted": "0,00",
  "performanceLossQty": 0,
  "performanceLossQtyFormatted": "0,00",
  "potentialAltQty": 0,
  "potentialAltQtyFormatted": "0,00",
  "potentialGroupIdealAltQty": null,
  "potentialGroupIdealPerformanceAltQty": null,
  "potentialGroupIdealPerformanceQty": null,
  "potentialGroupIdealQty": null,
  "potentialGroupTotalAltQty": null,
  "potentialGroupTotalQty": null,
  "potentialQty": 0,
  "potentialQtyFormatted": "0,00",
  "potentialQtyPctFormatted": null,
  "product": "Uus Johanna toode - Product route test",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    1957,
  ],
  "productionOrder": null,
  "rowProducedAltQty": 0,
  "rowProducedAltQtyFormatted": "0,00",
  "rowProducedQty": 0,
  "rowProducedQtyFormatted": "0,00",
  "scrapAltQty": 0,
  "scrapAltQtyFormatted": "0,00",
  "scrapGroupIdealAltQty": null,
  "scrapGroupIdealPerformanceAltQty": null,
  "scrapGroupIdealPerformanceQty": null,
  "scrapGroupIdealQty": null,
  "scrapGroupScrapAltQty": null,
  "scrapGroupScrapQty": null,
  "scrapGroupTotalAltQty": null,
  "scrapGroupTotalQty": null,
  "scrapQty": 0,
  "scrapQtyFormatted": "0,00",
  "scrapQtyPct": 0,
  "scrapQtyPctFormatted": "0,00%",
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Evocon production line T2",
  "stationGroup": "Tehas 2",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    1,
  ],
  "tableTimeLabel": "Week 47",
  "tooltipXLabel": "Week 47",
  "unitId": "tk",
  "value": 0,
  "xScaleValue": "202247",
  "xScaleValueFormatted": "Week 47",
}
`;

exports[`QuantityDataMap > returns correctly formatted output... > while granularity is year 1`] = `
{
  "%groupId": null,
  "altValue": 0,
  "alternativeUnitId": null,
  "availabilityLossAltQty": 0,
  "availabilityLossAltQtyFormatted": "0,00",
  "availabilityLossQty": 0,
  "availabilityLossQtyFormatted": "0,00",
  "color": null,
  "defined": true,
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodAltQty": 0,
  "goodAltQtyFormatted": "0,00",
  "goodGroupGoodAltQty": null,
  "goodGroupGoodQty": null,
  "goodGroupIdealAltQty": null,
  "goodGroupIdealPerformanceAltQty": null,
  "goodGroupIdealPerformanceQty": null,
  "goodGroupIdealQty": null,
  "goodGroupTotalAltQty": null,
  "goodGroupTotalQty": null,
  "goodQty": 0,
  "goodQtyFormatted": "0,00",
  "goodQtyPct": 0,
  "goodQtyPctFormatted": "0,00%",
  "groupingKey": "2022",
  "idealAltQty": 0,
  "idealAltQtyFormatted": "0,00",
  "idealQty": 0,
  "idealQtyFormatted": "0,00",
  "isFake": false,
  "itemGroupingId": "2022",
  "lotCode": null,
  "measureLabel": "2022",
  "notes": null,
  "notesCount": null,
  "operator": "",
  "operatorId": [
    null,
  ],
  "performanceLossAltQty": 0,
  "performanceLossAltQtyFormatted": "0,00",
  "performanceLossQty": 0,
  "performanceLossQtyFormatted": "0,00",
  "potentialAltQty": 0,
  "potentialAltQtyFormatted": "0,00",
  "potentialGroupIdealAltQty": null,
  "potentialGroupIdealPerformanceAltQty": null,
  "potentialGroupIdealPerformanceQty": null,
  "potentialGroupIdealQty": null,
  "potentialGroupTotalAltQty": null,
  "potentialGroupTotalQty": null,
  "potentialQty": 0,
  "potentialQtyFormatted": "0,00",
  "potentialQtyPctFormatted": null,
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    8,
  ],
  "productionOrder": null,
  "rowProducedAltQty": 0,
  "rowProducedAltQtyFormatted": "0,00",
  "rowProducedQty": 0,
  "rowProducedQtyFormatted": "0,00",
  "scrapAltQty": 0,
  "scrapAltQtyFormatted": "0,00",
  "scrapGroupIdealAltQty": null,
  "scrapGroupIdealPerformanceAltQty": null,
  "scrapGroupIdealPerformanceQty": null,
  "scrapGroupIdealQty": null,
  "scrapGroupScrapAltQty": null,
  "scrapGroupScrapQty": null,
  "scrapGroupTotalAltQty": null,
  "scrapGroupTotalQty": null,
  "scrapQty": 0,
  "scrapQtyFormatted": "0,00",
  "scrapQtyPct": 0,
  "scrapQtyPctFormatted": "0,00%",
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "2022",
  "tooltipXLabel": "2022",
  "unitId": "MIN",
  "value": 0,
  "xScaleValue": "2022",
  "xScaleValueFormatted": "2022",
}
`;

exports[`QuantityDataMap > returns correctly unformatted output... > while granularity is date 1`] = `
{
  "%groupId": null,
  "altValue": null,
  "alternativeUnitId": null,
  "availabilityLossAltQty": null,
  "availabilityLossAltQtyFormatted": null,
  "availabilityLossQty": null,
  "availabilityLossQtyFormatted": null,
  "color": null,
  "defined": null,
  "entityGroupName": null,
  "entityName": "Evocon production line T2",
  "factory": null,
  "factoryId": null,
  "goodAltQty": null,
  "goodAltQtyFormatted": null,
  "goodGroupGoodAltQty": null,
  "goodGroupGoodQty": null,
  "goodGroupIdealAltQty": null,
  "goodGroupIdealPerformanceAltQty": null,
  "goodGroupIdealPerformanceQty": null,
  "goodGroupIdealQty": null,
  "goodGroupTotalAltQty": null,
  "goodGroupTotalQty": null,
  "goodQty": null,
  "goodQtyFormatted": null,
  "goodQtyPct": null,
  "goodQtyPctFormatted": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealAltQtyFormatted": null,
  "idealQty": null,
  "idealQtyFormatted": null,
  "isFake": false,
  "itemGroupingId": "2022-11-25",
  "lotCode": null,
  "measureLabel": "2022-11-25",
  "notes": null,
  "notesCount": null,
  "operator": "",
  "operatorId": null,
  "performanceLossAltQty": null,
  "performanceLossAltQtyFormatted": null,
  "performanceLossQty": null,
  "performanceLossQtyFormatted": null,
  "potentialAltQty": null,
  "potentialAltQtyFormatted": null,
  "potentialGroupIdealAltQty": null,
  "potentialGroupIdealPerformanceAltQty": null,
  "potentialGroupIdealPerformanceQty": null,
  "potentialGroupIdealQty": null,
  "potentialGroupTotalAltQty": null,
  "potentialGroupTotalQty": null,
  "potentialQty": null,
  "potentialQtyFormatted": null,
  "potentialQtyPctFormatted": null,
  "product": "Uus Johanna toode - Product route test",
  "productGroup": null,
  "productGroupId": null,
  "productId": 1957,
  "productionOrder": null,
  "rowProducedAltQty": null,
  "rowProducedAltQtyFormatted": null,
  "rowProducedQty": null,
  "rowProducedQtyFormatted": null,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": null,
  "scrapGroupIdealAltQty": null,
  "scrapGroupIdealPerformanceAltQty": null,
  "scrapGroupIdealPerformanceQty": null,
  "scrapGroupIdealQty": null,
  "scrapGroupScrapAltQty": null,
  "scrapGroupScrapQty": null,
  "scrapGroupTotalAltQty": null,
  "scrapGroupTotalQty": null,
  "scrapQty": null,
  "scrapQtyFormatted": null,
  "scrapQtyPct": null,
  "scrapQtyPctFormatted": null,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Evocon production line T2",
  "stationGroup": "Tehas 2",
  "stationGroupId": 1,
  "stationId": 1,
  "tableTimeLabel": "2022-11-25",
  "tooltipXLabel": "2022-11-25",
  "unitId": "tk",
  "value": null,
  "xScaleValue": "2022-11-25",
  "xScaleValueFormatted": "2022-11-25",
}
`;

exports[`QuantityDataMap > returns correctly unformatted output... > while granularity is month 1`] = `
{
  "%groupId": null,
  "altValue": null,
  "alternativeUnitId": null,
  "availabilityLossAltQty": null,
  "availabilityLossAltQtyFormatted": null,
  "availabilityLossQty": null,
  "availabilityLossQtyFormatted": null,
  "color": null,
  "defined": null,
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": null,
  "goodAltQty": null,
  "goodAltQtyFormatted": null,
  "goodGroupGoodAltQty": null,
  "goodGroupGoodQty": null,
  "goodGroupIdealAltQty": null,
  "goodGroupIdealPerformanceAltQty": null,
  "goodGroupIdealPerformanceQty": null,
  "goodGroupIdealQty": null,
  "goodGroupTotalAltQty": null,
  "goodGroupTotalQty": null,
  "goodQty": null,
  "goodQtyFormatted": null,
  "goodQtyPct": null,
  "goodQtyPctFormatted": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealAltQtyFormatted": null,
  "idealQty": null,
  "idealQtyFormatted": null,
  "isFake": false,
  "itemGroupingId": "202211",
  "lotCode": null,
  "measureLabel": "202211",
  "notes": null,
  "notesCount": null,
  "operator": "",
  "operatorId": null,
  "performanceLossAltQty": null,
  "performanceLossAltQtyFormatted": null,
  "performanceLossQty": null,
  "performanceLossQtyFormatted": null,
  "potentialAltQty": null,
  "potentialAltQtyFormatted": null,
  "potentialGroupIdealAltQty": null,
  "potentialGroupIdealPerformanceAltQty": null,
  "potentialGroupIdealPerformanceQty": null,
  "potentialGroupIdealQty": null,
  "potentialGroupTotalAltQty": null,
  "potentialGroupTotalQty": null,
  "potentialQty": null,
  "potentialQtyFormatted": null,
  "potentialQtyPctFormatted": null,
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": null,
  "productId": 8,
  "productionOrder": null,
  "rowProducedAltQty": null,
  "rowProducedAltQtyFormatted": null,
  "rowProducedQty": null,
  "rowProducedQtyFormatted": null,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": null,
  "scrapGroupIdealAltQty": null,
  "scrapGroupIdealPerformanceAltQty": null,
  "scrapGroupIdealPerformanceQty": null,
  "scrapGroupIdealQty": null,
  "scrapGroupScrapAltQty": null,
  "scrapGroupScrapQty": null,
  "scrapGroupTotalAltQty": null,
  "scrapGroupTotalQty": null,
  "scrapQty": null,
  "scrapQtyFormatted": null,
  "scrapQtyPct": null,
  "scrapQtyPctFormatted": null,
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 53,
  "tableTimeLabel": "202211",
  "tooltipXLabel": "202211",
  "unitId": "MIN",
  "value": null,
  "xScaleValue": "202211",
  "xScaleValueFormatted": "202211",
}
`;

exports[`QuantityDataMap > returns correctly unformatted output... > while granularity is total 1`] = `
{
  "%groupId": null,
  "altValue": null,
  "alternativeUnitId": null,
  "availabilityLossAltQty": null,
  "availabilityLossAltQtyFormatted": null,
  "availabilityLossQty": null,
  "availabilityLossQtyFormatted": null,
  "color": null,
  "defined": null,
  "entityGroupName": null,
  "entityName": "Tehas 1.",
  "factory": null,
  "factoryId": null,
  "goodAltQty": null,
  "goodAltQtyFormatted": null,
  "goodGroupGoodAltQty": null,
  "goodGroupGoodQty": null,
  "goodGroupIdealAltQty": null,
  "goodGroupIdealPerformanceAltQty": null,
  "goodGroupIdealPerformanceQty": null,
  "goodGroupIdealQty": null,
  "goodGroupTotalAltQty": null,
  "goodGroupTotalQty": null,
  "goodQty": null,
  "goodQtyFormatted": null,
  "goodQtyPct": null,
  "goodQtyPctFormatted": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealAltQtyFormatted": null,
  "idealQty": null,
  "idealQtyFormatted": null,
  "isFake": false,
  "itemGroupingId": 2,
  "lotCode": "LOT-001",
  "measureLabel": "Tehas 1.",
  "notes": null,
  "notesCount": null,
  "operator": "",
  "operatorId": null,
  "performanceLossAltQty": null,
  "performanceLossAltQtyFormatted": null,
  "performanceLossQty": null,
  "performanceLossQtyFormatted": null,
  "potentialAltQty": null,
  "potentialAltQtyFormatted": null,
  "potentialGroupIdealAltQty": null,
  "potentialGroupIdealPerformanceAltQty": null,
  "potentialGroupIdealPerformanceQty": null,
  "potentialGroupIdealQty": null,
  "potentialGroupTotalAltQty": null,
  "potentialGroupTotalQty": null,
  "potentialQty": null,
  "potentialQtyFormatted": null,
  "potentialQtyPctFormatted": null,
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": null,
  "productId": 8,
  "productionOrder": "ORDER-42",
  "rowProducedAltQty": null,
  "rowProducedAltQtyFormatted": null,
  "rowProducedQty": null,
  "rowProducedQtyFormatted": null,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": null,
  "scrapGroupIdealAltQty": null,
  "scrapGroupIdealPerformanceAltQty": null,
  "scrapGroupIdealPerformanceQty": null,
  "scrapGroupIdealQty": null,
  "scrapGroupScrapAltQty": null,
  "scrapGroupScrapQty": null,
  "scrapGroupTotalAltQty": null,
  "scrapGroupTotalQty": null,
  "scrapQty": null,
  "scrapQtyFormatted": null,
  "scrapQtyPct": null,
  "scrapQtyPctFormatted": null,
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 53,
  "tableTimeLabel": "Tehas 1.",
  "tooltipXLabel": "Tehas 1.",
  "unitId": "MIN",
  "value": null,
  "xScaleValue": 2,
  "xScaleValueFormatted": 2,
}
`;

exports[`QuantityDataMap > returns correctly unformatted output... > while granularity is weekofyear 1`] = `
{
  "%groupId": null,
  "altValue": null,
  "alternativeUnitId": null,
  "availabilityLossAltQty": null,
  "availabilityLossAltQtyFormatted": null,
  "availabilityLossQty": null,
  "availabilityLossQtyFormatted": null,
  "color": null,
  "defined": null,
  "entityGroupName": null,
  "entityName": "Evocon production line T2",
  "factory": null,
  "factoryId": null,
  "goodAltQty": null,
  "goodAltQtyFormatted": null,
  "goodGroupGoodAltQty": null,
  "goodGroupGoodQty": null,
  "goodGroupIdealAltQty": null,
  "goodGroupIdealPerformanceAltQty": null,
  "goodGroupIdealPerformanceQty": null,
  "goodGroupIdealQty": null,
  "goodGroupTotalAltQty": null,
  "goodGroupTotalQty": null,
  "goodQty": null,
  "goodQtyFormatted": null,
  "goodQtyPct": null,
  "goodQtyPctFormatted": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealAltQtyFormatted": null,
  "idealQty": null,
  "idealQtyFormatted": null,
  "isFake": false,
  "itemGroupingId": "202247",
  "lotCode": null,
  "measureLabel": "202247",
  "notes": null,
  "notesCount": null,
  "operator": "",
  "operatorId": null,
  "performanceLossAltQty": null,
  "performanceLossAltQtyFormatted": null,
  "performanceLossQty": null,
  "performanceLossQtyFormatted": null,
  "potentialAltQty": null,
  "potentialAltQtyFormatted": null,
  "potentialGroupIdealAltQty": null,
  "potentialGroupIdealPerformanceAltQty": null,
  "potentialGroupIdealPerformanceQty": null,
  "potentialGroupIdealQty": null,
  "potentialGroupTotalAltQty": null,
  "potentialGroupTotalQty": null,
  "potentialQty": null,
  "potentialQtyFormatted": null,
  "potentialQtyPctFormatted": null,
  "product": "Uus Johanna toode - Product route test",
  "productGroup": null,
  "productGroupId": null,
  "productId": 1957,
  "productionOrder": null,
  "rowProducedAltQty": null,
  "rowProducedAltQtyFormatted": null,
  "rowProducedQty": null,
  "rowProducedQtyFormatted": null,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": null,
  "scrapGroupIdealAltQty": null,
  "scrapGroupIdealPerformanceAltQty": null,
  "scrapGroupIdealPerformanceQty": null,
  "scrapGroupIdealQty": null,
  "scrapGroupScrapAltQty": null,
  "scrapGroupScrapQty": null,
  "scrapGroupTotalAltQty": null,
  "scrapGroupTotalQty": null,
  "scrapQty": null,
  "scrapQtyFormatted": null,
  "scrapQtyPct": null,
  "scrapQtyPctFormatted": null,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Evocon production line T2",
  "stationGroup": "Tehas 2",
  "stationGroupId": 1,
  "stationId": 1,
  "tableTimeLabel": "202247",
  "tooltipXLabel": "202247",
  "unitId": "tk",
  "value": null,
  "xScaleValue": "202247",
  "xScaleValueFormatted": "202247",
}
`;

exports[`QuantityDataMap > returns correctly unformatted output... > while granularity is year 1`] = `
{
  "%groupId": null,
  "altValue": null,
  "alternativeUnitId": null,
  "availabilityLossAltQty": null,
  "availabilityLossAltQtyFormatted": null,
  "availabilityLossQty": null,
  "availabilityLossQtyFormatted": null,
  "color": null,
  "defined": null,
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": null,
  "goodAltQty": null,
  "goodAltQtyFormatted": null,
  "goodGroupGoodAltQty": null,
  "goodGroupGoodQty": null,
  "goodGroupIdealAltQty": null,
  "goodGroupIdealPerformanceAltQty": null,
  "goodGroupIdealPerformanceQty": null,
  "goodGroupIdealQty": null,
  "goodGroupTotalAltQty": null,
  "goodGroupTotalQty": null,
  "goodQty": null,
  "goodQtyFormatted": null,
  "goodQtyPct": null,
  "goodQtyPctFormatted": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealAltQtyFormatted": null,
  "idealQty": null,
  "idealQtyFormatted": null,
  "isFake": false,
  "itemGroupingId": "2022",
  "lotCode": null,
  "measureLabel": "2022",
  "notes": null,
  "notesCount": null,
  "operator": "",
  "operatorId": null,
  "performanceLossAltQty": null,
  "performanceLossAltQtyFormatted": null,
  "performanceLossQty": null,
  "performanceLossQtyFormatted": null,
  "potentialAltQty": null,
  "potentialAltQtyFormatted": null,
  "potentialGroupIdealAltQty": null,
  "potentialGroupIdealPerformanceAltQty": null,
  "potentialGroupIdealPerformanceQty": null,
  "potentialGroupIdealQty": null,
  "potentialGroupTotalAltQty": null,
  "potentialGroupTotalQty": null,
  "potentialQty": null,
  "potentialQtyFormatted": null,
  "potentialQtyPctFormatted": null,
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": null,
  "productId": 8,
  "productionOrder": null,
  "rowProducedAltQty": null,
  "rowProducedAltQtyFormatted": null,
  "rowProducedQty": null,
  "rowProducedQtyFormatted": null,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": null,
  "scrapGroupIdealAltQty": null,
  "scrapGroupIdealPerformanceAltQty": null,
  "scrapGroupIdealPerformanceQty": null,
  "scrapGroupIdealQty": null,
  "scrapGroupScrapAltQty": null,
  "scrapGroupScrapQty": null,
  "scrapGroupTotalAltQty": null,
  "scrapGroupTotalQty": null,
  "scrapQty": null,
  "scrapQtyFormatted": null,
  "scrapQtyPct": null,
  "scrapQtyPctFormatted": null,
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 53,
  "tableTimeLabel": "2022",
  "tooltipXLabel": "2022",
  "unitId": "MIN",
  "value": null,
  "xScaleValue": "2022",
  "xScaleValueFormatted": "2022",
}
`;
